Transport(fix[argv]): Keep a trailing semicolon
why: tmux ends a command at an argument whose last byte is ';' and
keeps the semicolon when a backslash precedes it, so a value ending in
one was truncated with no error. Only Buffers escaped for that rule, so
every other path carrying caller text lost the byte: creation names and
shell commands, run-shell, if-shell, bind-key, and every batch
operation. Batch also put its own ';' separators in the same flat argv,
leaving the transport unable to tell syntax from data.

what:
- CommandRequest holds List<List<String>> commands, each argv literal,
  and encodes for tmux's argv parser in commandLine(); the endpoint is
  passed through, since tmux reads it before parsing commands
- CommandStrings.arguments escapes a trailing semicolon and separates
  commands; stringify no longer consumes an escape a caller supplied
- Batch emits operations and markers as commands, not as one flat argv
- Buffers.argument goes, being the caller obligation this replaces
- ControlClient.isCommandGroup goes: an argv is one command by
  construction, so nothing a caller passes can strand a second reply
- Cover the two encodings on tmux 3.2a and 3.7b